CSS clear up, comments fixing